--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ boto==2.46.1
 Bottleneck==1.2.1
 brewer2mpl==1.4.1
 bs4==0.0.1
-certifi==2018.8.24
+certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
@@ -27,7 +27,7 @@ cloudpickle==0.2.2
 clyent==1.2.2
 colorama==0.3.9
 comtypes==1.1.2
-conda==4.5.9
+conda==4.5.11
 contextlib2==0.5.5
 cryptography==1.8.1
 cycler==0.10.0
@@ -51,6 +51,7 @@ gevent==1.2.1
 ggplot==0.11.5
 greenlet==0.4.12
 grip==4.5.2
+gunicorn==19.9.0
 h5py==2.7.1
 HeapDict==1.0.0
 html5lib==0.999
@@ -98,10 +99,12 @@ multipledispatch==0.4.9
 navigator-updater==0.2.0
 nbconvert==5.1.1
 nbformat==4.3.0
+nbmerge==0.0.4
 networkx==2.2rc1.dev20180329224049
 nltk==3.2.5
 nose==1.3.7
 notebook==5.0.0
+notedown==1.5.1
 numba==0.37.0
 numexpr==2.6.4
 numpy==1.13.3
@@ -111,6 +114,7 @@ olefile==0.44
 openpyxl==2.4.7
 packaging==16.8
 pandas==0.22.0
+pandoc-attributes==0.1.7
 pandocfilters==1.4.1
 partd==0.3.8
 path-and-address==2.0.1
@@ -180,6 +184,7 @@ Theano==0.9.0
 toolz==0.8.2
 torch==0.3.1.post2
 tornado==4.5.1
+tqdm==4.27.0
 traitlets==4.3.2
 typing==3.6.4
 unicodecsv==0.14.1
@@ -197,3 +202,4 @@ XlsxWriter==0.9.6
 xlwings==0.10.4
 xlwt==1.2.0
 zict==0.1.2
+zstd==1.3.5.1
