--- a/requirements.txt
+++ b/requirements.txt
@@ -1,201 +1,1 @@
-alabaster==0.7.10
-args==0.1.0
-asn1crypto==0.22.0
-astroid==1.4.9
-astropy==2.0.5
-Babel==2.4.0
-backports.shutil-get-terminal-size==1.0.0
-beakerx==0.12.2
-beautifulsoup4==4.6.0
-bitarray==0.8.1
-blaze==0.10.1
-bleach==1.5.0
-bokeh==0.12.5
-boto==2.46.1
-Bottleneck==1.2.1
-brewer2mpl==1.4.1
-bs4==0.0.1
-certifi==2018.10.15
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-clint==0.5.1
-cloudpickle==0.2.2
-colorama==0.3.9
-comtypes==1.1.2
-conda==4.5.11
-contextlib2==0.5.5
-cryptography==1.8.1
-cycler==0.10.0
-Cython==0.25.2
-cytoolz==0.8.2
-dask==0.14.3
-datashape==0.5.4
-decorator==4.2.1
-distributed==1.16.3
-docopt==0.6.2
-docutils==0.13.1
-emoji==0.5.1
-entrypoints==0.2.2
-et-xmlfile==1.0.1
-fastcache==1.0.2
-Flask==1.0.2
-Flask-Cors==3.0.2
-Flask-Uploads==0.2.1
-floyd-cli==0.11.8
-gevent==1.2.1
-ggplot==0.11.5
-greenlet==0.4.12
-grip==4.5.2
-gunicorn==19.9.0
-h5py==2.7.1
-HeapDict==1.0.0
-html5lib==0.999
-idna==2.7
-imageio==2.2.0
-imagesize==0.7.1
-ipykernel==4.6.1
-ipython==5.3.0
-ipython-genutils==0.2.0
-ipywidgets==7.1.1
-isort==4.2.5
-itsdangerous==0.24
-jdcal==1.3
-jedi==0.10.2
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.0.1
-jupyter-console==5.1.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.4.0
-jupyter-core==4.3.0
-jupyter-highlight-selected-word==0.1.0
-jupyter-latex-envs==1.4.4
-jupyter-nbextensions-configurator==0.4.0
-kaggle==1.1.0
-Keras==2.1.5
-kiwisolver==1.0.1
-lazy-object-proxy==1.2.2
-llvmlite==0.22.0
-locket==0.2.0
-lxml==3.7.3
-mako==1.0.7
-Markdown==3.0.1
-MarkupSafe==0.23
-marshmallow==2.15.5
-matplotlib==1.5.3
-menuinst==1.4.7
-mistune==0.7.4
-mkl-fft==1.0.0
-mkl-random==1.0.1
-mpmath==0.19
-msgpack-python==0.4.8
-multipledispatch==0.4.9
-navigator-updater==0.2.0
-nbconvert==5.1.1
-nbformat==4.3.0
-nbmerge==0.0.4
-networkx==2.2rc1.dev20180329224049
-nltk==3.2.5
-nose==1.3.7
-notebook==5.0.0
-notedown==1.5.1
-numba==0.37.0
-numexpr==2.6.4
-numpy==1.13.3
-numpydoc==0.6.0
-odo==0.5.0
-olefile==0.44
-openpyxl==2.4.7
-packaging==16.8
-pandas==0.22.0
-pandoc-attributes==0.1.7
-pandocfilters==1.4.1
-partd==0.3.8
-path-and-address==2.0.1
-path.py==10.3.1
-pathlib2==2.3.2
-patsy==0.4.1
-pep8==1.7.0
-pexpect==4.6.0
-pickleshare==0.7.4
-Pillow==4.2.1
-ply==3.10
-prompt-toolkit==1.0.14
-psutil==5.2.2
-ptyprocess==0.6.0
-py==1.4.33
-pyactr==0.2.3
-pycosat==0.6.3
-pycparser==2.17
-pycrypto==2.6.1
-pycurl==7.43.0.1
-pyflakes==1.5.0
-pygame==1.9.3
-Pygments==2.2.0
-pygpu==0.7.6
-pylint==1.6.4
-pyodbc==4.0.16
-pyOpenSSL==17.0.0
-pyparsing==2.1.4
-PySocks==1.6.8
-pytest==3.0.7
-python-dateutil==2.6.0
-pytz==2018.5
-PyWavelets==0.5.2
-pywin32==220
-PyYAML==3.13
-pyzmq==16.0.2
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.2.1
-raven==6.9.0
-requests==2.19.1
-requests-toolbelt==0.8.0
-robobrowser==0.5.3
-rope-py3k==0.9.4.post1
-scikit-image==0.13.1
-scikit-learn==0.19.1
-scipy==0.19.1
-seaborn==0.8.1
-simplegeneric==0.8.1
-simpy==3.0.11
-singledispatch==3.4.0.3
-six==1.11.0
-snowballstemmer==1.2.1
-sortedcollections==0.5.3
-sortedcontainers==1.5.7
-sphinx==1.5.6
-spyder==3.1.4
-SQLAlchemy==1.1.9
-statsmodels==0.8.0
-sympy==1.0
-tables==3.4.2
-tabulate==0.8.2
-tblib==1.3.2
-testpath==0.3
-textgenrnn==1.0
-Theano==0.9.0
-toolz==0.8.2
-torch==0.3.1.post2
-tornado==4.5.1
-tqdm==4.27.0
-traitlets==4.3.2
-typing==3.6.4
-unicodecsv==0.14.1
-urllib3==1.23
-wcwidth==0.1.7
-Werkzeug==0.14.1
-widgetsnbextension==3.1.3
-win-inet-pton==1.0.1
-win-unicode-console==0.5
-wincertstore==0.2
-wkhtmltopdf==0.2
-wrapt==1.10.10
-xlrd==1.0.0
-XlsxWriter==0.9.6
-xlwings==0.10.4
-xlwt==1.2.0
-zict==0.1.2
-zstd==1.3.5.1
+flask
